Created spherical planet geometry framework.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <script src="libjs/OBJLoader.js"></script>
 <script src="libjs/ImprovedNoise.js"></script>
 <script src="libjs/Spherical.js"></script>
+<script src="libjs/PlanetGeometry.js"></script>
 <script src="js/gui.js"></script>
 <script src="js/main.js"></script>
 
