Started to add gui

--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
 <script src="libjs/three.min.js"></script>
 <script src="libjs/FirstPersonControls.js"></script>
 <script src="libjs/stats.min.js"></script>
-<script src="libjs/dat.gui.js"></script>
+<script src="libjs/dat.gui.min.js"></script>
 <script src="libjs/OrbitControls.js"></script>
 <script src="libjs/OBJLoader.js"></script>
 <script src="libjs/ImprovedNoise.js"></script>
 <script src="libjs/Spherical.js"></script>
 <script src="libjs/PlanetGeometry.js"></script>
+<script src="js/parser.js"></script>
+<script src="js/guiConfig.js"></script>
 <script src="js/gui.js"></script>
+<script src="js/planetMaker.js"></script>
 <script src="js/main.js"></script>
 
 </html>
