--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 <script src="libjs/OBJLoader.js"></script>
 <script src="libjs/ImprovedNoise.js"></script>
 <script src="libjs/Spherical.js"></script>
-<script src="libjs/PlanetGeometry.js"></script>
+<script src="js/PlanetGeometry.js"></script>
+<script src="js/NoiseGenerator.js"></script>
 <script src="js/parser.js"></script>
 <script src="js/guiConfig.js"></script>
 <script src="js/gui.js"></script>
