Added basic framework for the editor

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div id="stats"></div>
   <div id="main_div">
     <h1> <span class="assignment"> Planet426 <br></span> </h1>
-    <h2>Switch to: <a href='editor.html'>Editor</a></h2>
+    <h2>Switch to: <a href='editor.html'>Terrain Painter</a></h2>
     <canvas id="canvas"> </canvas>
   </div>
   <div id="container"></div>
