Implemented Color Util (still needs adjustments) Added color methods to PlanetGeometry Added Normalized Perlin Generator

--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
 <script src="js/gui.js"></script>
 <script src="js/planetMaker.js"></script>
 <script src="js/main.js"></script>
+<script src="js/colorUtil.js"></script>
 
 </html>
