--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 <script src="libjs/OBJLoader.js"></script>
 <script src="libjs/ImprovedNoise.js"></script>
 <script src="libjs/Spherical.js"></script>
+<script src="libjs/Ocean.js"></script>
+<script src="libjs/Shaders/OceanShaders.js"></script>
 <script src="js/PlanetGeometry.js"></script>
 <script src="js/NoiseGenerator.js"></script>
 <script src="js/parser.js"></script>
