--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Expires" content="-1">
   <meta http-equiv="cache-control" content="no-store">
 
-  <title> Planet426 </title>
+  <title> PlanIt 426 </title>
   <link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 
@@ -15,7 +15,7 @@
 
   <div id="stats"></div>
   <div id="main_div">
-    <h1> <span class="assignment"> Planet426 <br></span> </h1>
+    <h1> <span class="assignment"> PlanIt 426 <br></span> </h1>
     <!--h2>Switch to: <a href='editor.html'>Terrain Painter</a></h2-->
     <canvas id="canvas"> </canvas>
   </div>
