Added planetery ring with GUI

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <script src="js/gui.js"></script>
 <script src="js/planetMaker.js"></script>
 <script src="js/colorUtil.js"></script>
+<script src="js/XRingGeometry.js"></script>
 <script src="js/main.js"></script>
 
 </html>
