Fixed link to ColorUtil

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <script src="js/materials.js"></script>
 <script src="js/gui.js"></script>
 <script src="js/planetMaker.js"></script>
-<script src="js/colorUtil.js"></script>
+<script src="js/ColorUtil.js"></script>
 <script src="js/XRingGeometry.js"></script>
 <script src="js/main.js"></script>
 
